XNAT-4555, XNAT-4642: removed a missing method that was preventing a dialog from closing; long usernames, names, and email addresses will be truncated in the users list on the user admin page; other minor fixes - styling on login/forgot pages, used $! in Velocity variables to prevent returning the variable name as a string if the variable was undefined (also wrapped some in a js function to prevent errors when blank.

--- a/src/main/webapp/style/app.css
+++ b/src/main/webapp/style/app.css
@@ -1284,6 +1284,11 @@ body.xnat .chosen-container {
     margin-bottom: 0;
 }
 
+#login_box [type="submit"],
+#register_box [type="submit"] {
+    font-size: 13px !important;
+}
+
 #login_form,
 #register_form {
     border: 1px solid #ccc;
@@ -1313,7 +1318,8 @@ body.xnat .chosen-container {
 /*max-width: 1200px;*/
 /*}*/
 
-#register_forgot a {
+#register_forgot a,
+#register_forgot span.sep {
     margin-right: 20px;
 }
 
